# Modelisation

./: catenoide.docx  ~$tenoide.docx
enveloppe_convexe/: CMakeLists.txt  graham.cpp  jarvis.cpp  main.cpp
splines_Gaelle/: control_polygon.txt
splines_Gaelle/src/lib/spline/: polygon_grid.cpp  polygon_grid.hpp  spline_evaluator.cpp  spline_patch.cpp
splines_Gaelle/src/local/interface/: myWidgetGL.cpp  myWidgetGL.hpp
splines_Gaelle/src/local/scene/: scene.cpp
tp_courbure_Gaelle/: README.md
tp_courbure_Gaelle/src/local/scene/: scene.cpp  scene.hpp
tp_courbure_Gaelle_version2/src/local/scene/: catenoide.cpp  catenoide.hpp  cylindrique.cpp  cylindrique.hpp  helicoide.cpp  helicoide.hpp  methode.cpp  methode.hpp  para_hyper.cpp  para_hyper.hpp  pseudo_sphere.cpp  pseudo_sphere.hpp  scene.cpp  sphere.cpp  sphere.hpp
tp_maillage Gaelle/tp_modelisation/src/local/interface/: myWidgetGL.cpp
tp_maillage_Capu/: README
tp_maillage_Capu/src/local/scene/: scene.cpp  scene.hpp
tp_maillage_Capu/tp_modelisation/src/local/scene/: scene.cpp
tp_maillage_Gaelle/: README
tp_maillage_Gaelle/src/local/scene/: scene.cpp  scene.hpp
